@@ -1,7 +1,10 @@
 2003-09-16  Katsumi Yamaoka  <yamaoka@jpl.org>
 
+	* w3m-hist.el (w3m-history-backward): Return nil if there is no
+	previous element.
+
 	* w3m.el (w3m-view-previous-page): Skip the current page if it
-	seems broken.
+	seems broken; warn if there's no more history.
 	(w3m-copy-buffer): Use the current history for the url string if
 	the current page seems broken.
 	(w3m-goto-url): Use `lexical-let' to pass the history position
